# QmlNativeWebView

./: CMakeLists.txt  Main.qml  NativeWebView.qml  README.md  WebViewItem.h  WebViewItem.mm  customwebview.h  customwebview_mac.mm  customwebview_win.cpp  customwebviewwindow.h  customwebviewwindow.mm  main.cpp  vcpkg.json
